fixed logout button mobile bug

--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,5 +1,5 @@
 .Dashboard .container-fluid {
-  padding-top: 70px;
+  margin-top: 66px;
 }
 
 .Dashboard__sidebar {
